--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 <body>
 
-    <!-- The chart will be displayed here -->
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tradingview/charting-library@latest/charting-library.min.js"></script>
@@ -40,7 +39,7 @@
 
         // Fetch data from the provided JSON URL
         async function fetchChartData() {
-            const response = await axios.get('https://github.com/trustosas/market-replay/raw/refs/heads/main/eurusd15.json');
+            const response = await axios.get('eurusd15.json');
             const data = response.data;
 
             // Convert the data into the format expected by TradingView's chart
