--- a/index.html
+++ b/index.html
@@ -3,68 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TradingView-like Chart Interface</title>
-    <link href="https://cdn.jsdelivr.net/npm/@tradingview/charting-library@latest/charting-library.min.css" rel="stylesheet">
+    <title>TradingView-like Chart</title>
+    <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
     <style>
-        #chart {
-            height: 100vh;
-        }
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            padding: 0;
+            overflow: hidden; /* Prevent scrollbars */
+        }
+        #chart {
+            width: 100%;
+        }
+        #controls {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 10;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
-
+    <div id="controls">
+        <label for="datetime">Jump to Datetime:</label>
+        <input type="datetime-local" id="datetime">
+        <button id="jump-btn">Jump</button>
+    </div>
     <div id="chart"></div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@tradingview/charting-library@latest/charting-library.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    
     <script>
-        // Set up chart options
-        const chartOptions = {
-            container: document.getElementById("chart"),
-            libraryPath: 'https://cdn.jsdelivr.net/npm/@tradingview/charting-library@latest/charting-library/',
-            locale: 'en',
-            theme: 'Light', // You can switch between 'Light' or 'Dark' theme
-            studiesOverrides: {
-                'moving_averages.ma1.color': '#FF0000', // Example: override moving average color
-            },
-        };
+        const chartContainer = document.getElementById('chart');
 
         // Initialize the chart
-        const widget = new TradingView.widget(chartOptions);
+        const chart = LightweightCharts.createChart(chartContainer, {
+            layout: {
+                backgroundColor: '#FFFFFF',
+                textColor: '#000',
+            },
+            grid: {
+                vertLines: { color: '#eee' },
+                horzLines: { color: '#eee' },
+            },
+            timeScale: {
+                timeVisible: true,
+                secondsVisible: false,
+            },
+        });
 
-        // Fetch data from the provided JSON URL
-        async function fetchChartData() {
-            const response = await axios.get('eurusd15.json');
-            const data = response.data;
+        const candlestickSeries = chart.addCandlestickSeries();
 
-            // Convert the data into the format expected by TradingView's chart
-            const formattedData = data.map(item => ({
-                time: item.timestamp * 1000, // convert timestamp to milliseconds
-                open: item.open,
-                high: item.high,
-                low: item.low,
-                close: item.close
-            }));
+        // Fetch and set the data
+        let chartData = [];
+        fetch('eurusd15.json')
+            .then(response => response.json())
+            .then(data => {
+                chartData = data.map(item => ({
+                    time: new Date(item.datetime).getTime() / 1000,
+                    open: item.open,
+                    high: item.high,
+                    low: item.low,
+                    close: item.close,
+                }));
+                candlestickSeries.setData(chartData);
+            })
+            .catch(err => console.error('Error loading data:', err));
 
-            // Use the chart's API to add data
-            widget.onChartReady(function() {
-                widget.chart.addDataSource({
-                    type: 'candlestick',
-                    data: formattedData,
-                    symbol: 'EUR/USD',
-                    interval: '15',
-                });
-            });
+        // Dynamically resize the chart
+        function resizeChart() {
+            const viewportHeight = window.visualViewport?.height || window.innerHeight;
+            const viewportWidth = window.visualViewport?.width || window.innerWidth;
+            const controlsHeight = document.getElementById('controls').offsetHeight + 20; // Add padding
+
+            // Resize the chart dynamically
+            chartContainer.style.height = `${viewportHeight - controlsHeight}px`;
+            chart.resize(viewportWidth - 20, viewportHeight - controlsHeight); // Leave 20px for price scale
         }
 
-        // Run the fetch function
-        fetchChartData();
-    </script>
+        window.addEventListener('resize', resizeChart);
+        resizeChart();
 
+        // Jump to specific datetime
+        document.getElementById('jump-btn').addEventListener('click', () => {
+            const datetimeInput = document.getElementById('datetime').value;
+            if (datetimeInput) {
+                const targetTime = new Date(datetimeInput).getTime() / 1000;
+
+                // Find the closest data point
+                const closestData = chartData.reduce((prev, curr) =>
+                    Math.abs(curr.time - targetTime) < Math.abs(prev.time - targetTime) ? curr : prev
+                );
+
+                // Set visible range around the target time
+                if (closestData) {
+                    chart.timeScale().setVisibleRange({
+                        from: closestData.time - 60 * 15, // 15 minutes before
+                        to: closestData.time + 60 * 15,  // 15 minutes after
+                    });
+                }
+            } else {
+                alert('Please select a valid datetime.');
+            }
+        });
+    </script>
 </body>
 </html>
