Testing crosshair feature

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         window.addEventListener('resize', resizeChart);
         resizeChart();
 
-        // Jump to specific datetime
+        // Jump to specific datetime and place a crosshair
         document.getElementById('jump-btn').addEventListener('click', () => {
             const datetimeInput = document.getElementById('datetime').value;
 
@@ -104,12 +104,11 @@
                     Math.abs(curr.time - targetTime) < Math.abs(prev.time - targetTime) ? curr : prev
                 );
 
-                // Set the visible range around the target time
+                // Move the crosshair to the target time
                 if (closestData) {
-                    chart.timeScale().setVisibleRange({
-                        from: closestData.time - 60 * 15, // 15 minutes before
-                        to: closestData.time + 60 * 15,  // 15 minutes after
-                    });
+                    chart.moveCrosshair({ time: closestData.time });
+                } else {
+                    alert('No data found for the selected datetime.');
                 }
             } else {
                 alert('Please select a valid datetime.');
