--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             position: 'aboveBar',
                             color: '#ff0000', // Highlight color
                             shape: 'arrowDown', // Shape of the marker
-                            text: 'Target Candle',
+                            text: '',
                         }
                     ]);
                 } else {
