Updates to the jump to div

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 </head>
 <body>
     <div id="controls">
-        <label for="datetime">Jump to Datetime:</label>
+        <label for="datetime">Jump to:</label>
         <input type="datetime-local" id="datetime">
-        <button id="jump-btn">Jump</button>
+        <button id="jump-btn">Go</button>
     </div>
     <div id="chart"></div>
     <script>
